# asr

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  NOTICE  README.md  install.ps1  install.sh  pyproject.toml
.codex/skills/: agex.md  asi-exec.md  asi-kickoff.md  asi-onboard.md  asi-plan.md  changelog.md  dewey.md  diff.md  doctor.md  find.md  grape.md  grep.md  ls.md  md.md  plan-create.md  plan-discuss.md  plan-exec.md  plan-review.md  plan-status.md  plan.md  prompt-compile.md  prompt-exec.md  prompt-forge.md  prompt.md  sniff.md
.github/workflows/: README.md  lint.yml  publish.yml  release.yml  test.yml
docs/: .INDEX.md  COMMANDS.md  QUICKSTART.md  VALIDATION.md
docs/commands/: .INDEX.md  ADAPTER.md  ADD.md  FIND.md  INFO.md  LIST.md  RM.md  STATUS.md  SYNC.md  USE.md
docs/validation/: .INDEX.md
src/: __init__.py  cli.py  clones.py  config.py  manifest.py  registry.py  remote.py  tracking.py  validate.py
src/adapters/: __init__.py  base.py  claude.py  codex.py  copilot.py  cursor.py  windsurf.py
src/agents/: base.py
src/asr_cmd/: __init__.py  adapter.py  add.py  clean.py  list.py  status.py  sync.py  use.py
src/commands/: adapter.py  add.py  clean.py  diff.py  exec.py  help.py  info.py  list.py  registry.py  rm.py  status.py  sync.py  update.py  use.py  validate.py
src/config/: schema.py
src/skillcopy/: __init__.py  local.py  remote.py
src/skills/: __main__.py  adapter.py  cli.py  discovery.py  registry.py  validation.py
src/skills/adapters/: __init__.py  base.py  codex.py  cursor.py  windsurf.py
tests/: conftest.py  test_adapters.py  test_copy.py  test_exec.py  test_help.py  test_list.py  test_remote.py  test_script.py  test_tracking.py  test_use_glob.py
