[build-system]
requires = ["hatchling>=1.24.0"]
build-backend = "hatchling.build"

[project]
name = "asr"
version = "0.1.0"
description = "CLI for managing agent skills across IDE integrations"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Jordan Godau"}
]
dependencies = [
    "tomli>=2.0.0;python_version<'3.11'",
    "tomli-w>=1.0.0",
    "pyyaml>=6.0",
]

[project.scripts]
asr = "skills.cli:main"
skills = "skills.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
]

[tool.hatch.build.targets.wheel]
packages = ["src/skills"]

[tool.hatch.envs.dev]
dependencies = [
    "pytest>=7.0",
    "pytest-cov",
]

[tool.hatch.envs.dev.scripts]
test = "pytest -q"
